--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+#URL
+spring.datasource.url=jdbc:postgresql://localhost:5432/springtest
 
+#USERNAME
+spring.datasource.username=postgres
+
+#PASSWORD
+spring.datasource.password=root
+
+spring.jpa.show-sql=true
+
+#HIBERNATE
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+#HIBERANTE DDL AUTO
+spring.jpa.hibernate.ddl-auto= update
+
+
+#Configure the file size to be uploaded
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=1MB
